feat: 添加前端项目基础架构和配置文件，更新后端配置

--- a/backend/Src/Lean.Cur.Api/Lean.Cur.Api.csproj
+++ b/backend/Src/Lean.Cur.Api/Lean.Cur.Api.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <ProjectReference Include="..\Lean.Cur.Application\Lean.Cur.Application.csproj" />
     <ProjectReference Include="..\Lean.Cur.Infrastructure\Lean.Cur.Infrastructure.csproj" />
+    <ProjectReference Include="..\Lean.Cur.Common\Lean.Cur.Common.csproj" />
   </ItemGroup>
 
 </Project>
