--- a/backend/Src/Lean.Cur.Api/appsettings.json
+++ b/backend/Src/Lean.Cur.Api/appsettings.json
@@ -16,6 +16,24 @@
     "ExpirationMinutes": 120
   },
   "SecuritySettings": {
+    "Cors": {
+      "Enabled": true,
+      "Origins": [
+        "http://localhost:5173"
+      ],
+      "Methods": [
+        "GET",
+        "POST",
+        "PUT",
+        "DELETE",
+        "OPTIONS",
+        "PATCH"
+      ],
+      "Headers": [
+        "*"
+      ],
+      "AllowCredentials": true
+    },
     "RateLimit": {
       "DefaultSeconds": 1,
       "DefaultMaxRequests": 10,
