--- a/backend/Src/Lean.Cur.Domain/Lean.Cur.Domain.csproj
+++ b/backend/Src/Lean.Cur.Domain/Lean.Cur.Domain.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Lean.Cur.Common\Lean.Cur.Common.csproj" />
+  </ItemGroup>
+
 </Project>
