--- a/backend/Src/Lean.Cur.Api/appsettings.json
+++ b/backend/Src/Lean.Cur.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=localhost;Database=LeanCur;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    "DefaultConnection": "Server=localhost;Database=LeanCur;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
@@ -14,6 +14,16 @@
     "Issuer": "LeanCur",
     "Audience": "LeanCur",
     "ExpirationMinutes": 120
+  },
+  "CacheSettings": {
+    "UseRedis": false,
+    "Redis": {
+      "ConnectionString": "localhost:6379",
+      "DefaultDatabase": 0,
+      "Password": null,
+      "Ssl": false,
+      "ConnectTimeout": 5000
+    }
   },
   "SecuritySettings": {
     "Cors": {
