--- a/backend/Src/Lean.Cur.Application/Lean.Cur.Application.csproj
+++ b/backend/Src/Lean.Cur.Application/Lean.Cur.Application.csproj
@@ -8,8 +8,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Lean.Cur.Domain\Lean.Cur.Domain.csproj" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.0" />
+    <ProjectReference Include="..\Lean.Cur.Common\Lean.Cur.Common.csproj" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.1" />
+    <PackageReference Include="UAParser" Version="3.1.47" />
   </ItemGroup>
 
 </Project>
