--- a/backend/Src/Lean.Cur.Infrastructure/Lean.Cur.Infrastructure.csproj
+++ b/backend/Src/Lean.Cur.Infrastructure/Lean.Cur.Infrastructure.csproj
@@ -10,6 +10,7 @@
     <ProjectReference Include="..\Lean.Cur.Domain\Lean.Cur.Domain.csproj" />
     <ProjectReference Include="..\Lean.Cur.Application\Lean.Cur.Application.csproj" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.7.10" />
   </ItemGroup>
 
 </Project>
