优化NLog配置：1.优化日志分类和存储位置 2.添加日志脱敏功能 3.优化控制台输出格式

--- a/backend/Src/Lean.Cur.WebApi/nlog.config
+++ b/backend/Src/Lean.Cur.WebApi/nlog.config
@@ -2,73 +2,105 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
-      internalLogLevel="Info">
+      throwConfigExceptions="true"
+      internalLogLevel="Debug"
+      internalLogFile="${basedir}/logs/internal-nlog.txt"
+      internalLogToConsole="true">
 
-  <!-- 启用 ASP.NET Core 布局渲染器 -->
   <extensions>
     <add assembly="NLog.Web.AspNetCore"/>
   </extensions>
 
-  <!-- 日志输出目标 -->
+  <!-- 自定义变量 -->
+  <variables>
+    <!-- 定义脱敏正则表达式 -->
+    <variable name="passwordPattern" value="Password=([^;]+)" />
+    <variable name="sensitivePattern" value="(Password|Token|Secret|Key)=([^;,\s]+)" />
+  </variables>
+
   <targets>
-    <!-- 文件日志 -->
-    <target xsi:type="File" name="allfile"
-            fileName="${basedir}/logs/${shortdate}.log"
-            layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
+    <!-- 系统调试日志文件 -->
+    <target xsi:type="File" name="debugfile"
+            fileName="${basedir}/logs/${shortdate}/debug.log"
+            layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${uppercase:${level}}|${logger}|${replace:inner=${message}:searchFor=${passwordPattern}:replaceWith=Password=***}:${replace:inner=${message}:searchFor=${sensitivePattern}:replaceWith=$1=***} ${exception:format=tostring}"
+            archiveFileName="${basedir}/logs/archives/debug.{#}.log"
+            archiveEvery="Day"
+            archiveNumbering="Rolling"
+            maxArchiveFiles="30"
+            archiveAboveSize="10485760"/>
+            
+    <!-- 错误日志文件 -->
+    <target xsi:type="File" name="errorfile"
+            fileName="${basedir}/logs/${shortdate}/error.log"
+            layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${uppercase:${level}}|${logger}|${replace:inner=${message}:searchFor=${passwordPattern}:replaceWith=Password=***}:${replace:inner=${message}:searchFor=${sensitivePattern}:replaceWith=$1=***} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|${callsite}"
+            archiveFileName="${basedir}/logs/archives/error.{#}.log"
+            archiveEvery="Day"
+            archiveNumbering="Rolling"
+            maxArchiveFiles="30"/>
 
-    <!-- SQL日志 -->
-    <target xsi:type="ColoredConsole" name="sqlConsole"
-            layout="${longdate}|${uppercase:${level}}|SQL操作|${message}">
+    <!-- SQL日志文件 -->
+    <target xsi:type="File" name="sqlfile"
+            fileName="${basedir}/logs/${shortdate}/sql.log"
+            layout="${longdate}|${uppercase:${level}}|SQL操作|${replace:inner=${message}:searchFor=${passwordPattern}:replaceWith=Password=***}:${replace:inner=${message}:searchFor=${sensitivePattern}:replaceWith=$1=***}"
+            archiveFileName="${basedir}/logs/archives/sql.{#}.log"
+            archiveEvery="Day"
+            archiveNumbering="Rolling"
+            maxArchiveFiles="30"/>
+
+    <!-- 控制台输出 -->
+    <target xsi:type="ColoredConsole" name="lifeconsole"
+            layout="${time}|${uppercase:${level}}|系统运行|${replace:inner=${message}:searchFor=${passwordPattern}:replaceWith=Password=***}:${replace:inner=${message}:searchFor=${sensitivePattern}:replaceWith=$1=***}">
+      <highlight-row condition="level == LogLevel.Info" foregroundColor="Green"/>
+      <highlight-row condition="level == LogLevel.Warn" foregroundColor="Yellow"/>
+      <highlight-row condition="level == LogLevel.Error" foregroundColor="Red"/>
+    </target>
+
+    <target xsi:type="ColoredConsole" name="dbconsole"
+            layout="${time}|${uppercase:${level}}|数据库|${replace:inner=${message}:searchFor=${passwordPattern}:replaceWith=Password=***}:${replace:inner=${message}:searchFor=${sensitivePattern}:replaceWith=$1=***}">
       <highlight-row condition="level == LogLevel.Info" foregroundColor="Cyan"/>
-      <highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray"/>
       <highlight-row condition="level == LogLevel.Warn" foregroundColor="Yellow"/>
       <highlight-row condition="level == LogLevel.Error" foregroundColor="Red"/>
     </target>
 
-    <!-- 数据库操作日志 -->
-    <target xsi:type="ColoredConsole" name="databaseConsole"
-            layout="${longdate}|${uppercase:${level}}|数据库操作|${message}">
-      <highlight-row condition="level == LogLevel.Info" foregroundColor="Green"/>
-      <highlight-row condition="level == LogLevel.Warn" foregroundColor="Yellow"/>
-      <highlight-row condition="level == LogLevel.Error" foregroundColor="Red"/>
-    </target>
-
-    <!-- 用户操作日志 -->
-    <target xsi:type="ColoredConsole" name="userActionConsole"
-            layout="${longdate}|${uppercase:${level}}|用户操作|${message}">
-      <highlight-row condition="level == LogLevel.Info" foregroundColor="Green"/>
-      <highlight-row condition="level == LogLevel.Warn" foregroundColor="Yellow"/>
-      <highlight-row condition="level == LogLevel.Error" foregroundColor="Red"/>
-    </target>
-
-    <!-- 系统运行日志 -->
-    <target xsi:type="ColoredConsole" name="systemConsole"
-            layout="${longdate}|${uppercase:${level}}|系统运行|${message}">
+    <target xsi:type="ColoredConsole" name="appconsole"
+            layout="${time}|${uppercase:${level}}|${message}">
       <highlight-row condition="level == LogLevel.Info" foregroundColor="White"/>
       <highlight-row condition="level == LogLevel.Warn" foregroundColor="Yellow"/>
       <highlight-row condition="level == LogLevel.Error" foregroundColor="Red"/>
+      <highlight-row condition="level == LogLevel.Fatal" foregroundColor="Red" backgroundColor="White"/>
     </target>
   </targets>
 
-  <!-- 日志规则 -->
   <rules>
-    <!-- 所有日志写入文件 -->
-    <logger name="*" minlevel="Trace" writeTo="allfile" />
+    <!-- 错误日志写入错误日志文件 -->
+    <logger name="*" minlevel="Error" writeTo="errorfile" />
+    
+    <!-- 系统调试日志写入调试日志文件 -->
+    <logger name="Microsoft.*" minlevel="Debug" writeTo="debugfile" final="false" />
+    <logger name="System.*" minlevel="Debug" writeTo="debugfile" final="false" />
+    
+    <!-- SQL日志写入SQL日志文件 -->
+    <logger name="Lean.Cur.Infrastructure.Database.*" minlevel="Debug" writeTo="sqlfile" />
+    <logger name="SqlSugar.*" minlevel="Debug" writeTo="sqlfile" />
 
-    <!-- SQL日志 -->
-    <logger name="Lean.Cur.Infrastructure.Database.LeanAopProvider" minlevel="Debug" writeTo="sqlConsole" />
+    <!-- 控制台显示系统运行信息 -->
+    <logger name="Microsoft.Hosting.Lifetime" minlevel="Info" writeTo="lifeconsole" />
+    
+    <!-- 控制台显示数据库操作信息 -->
+    <logger name="Lean.Cur.Infrastructure.Database.*" minlevel="Info" writeTo="dbconsole" final="false">
+      <filters defaultAction="Log">
+        <when condition="level == LogLevel.Debug" action="Ignore" />
+      </filters>
+    </logger>
 
-    <!-- 数据库相关日志 -->
-    <logger name="Lean.Cur.Infrastructure.Extensions.DatabaseExtensions" minlevel="Debug" writeTo="databaseConsole" />
-    <logger name="SqlSugar.*" minlevel="Debug" writeTo="databaseConsole" />
-
-    <!-- 用户操作日志 -->
-    <logger name="Lean.Cur.*.Services.*" minlevel="Info" writeTo="userActionConsole" />
-    <logger name="Lean.Cur.*.Controllers.*" minlevel="Info" writeTo="userActionConsole" />
-
-    <!-- 系统日志 -->
-    <logger name="Microsoft.Hosting.Lifetime" minlevel="Info" writeTo="systemConsole" />
-    <logger name="Microsoft.*" minlevel="Warning" writeTo="systemConsole" final="true" />
-    <logger name="*" minlevel="Info" writeTo="systemConsole" />
+    <!-- 控制台显示应用程序信息 -->
+    <logger name="Lean.Cur.*" minlevel="Info" writeTo="appconsole">
+      <filters defaultAction="Log">
+        <when condition="starts-with(logger, 'Lean.Cur.Infrastructure.Database')" action="Ignore" />
+      </filters>
+    </logger>
+    
+    <!-- 其他所有日志写入调试文件 -->
+    <logger name="*" minlevel="Debug" writeTo="debugfile" />
   </rules>
 </nlog> 
