--- a/backend/Src/Lean.Cur.Common/Lean.Cur.Common.csproj
+++ b/backend/Src/Lean.Cur.Common/Lean.Cur.Common.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="7.5.2" />
     <PackageReference Include="IP2Region.Net" Version="2.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
