--- a/backend/Src/Lean.Cur.WebApi/appsettings.json
+++ b/backend/Src/Lean.Cur.WebApi/appsettings.json
@@ -6,6 +6,13 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=127.0.0.1,1433;Database=LeanCur_Dev;User Id=sa;Password=Tac26901333.;TrustServerCertificate=true;Pooling=true;Min Pool Size=1;Max Pool Size=100;Connect Timeout=30;MultipleActiveResultSets=true",
+    "DbFirst": "Server=127.0.0.1,1433;Database=LeanCur_Dev;User Id=sa;Password=Tac26901333.;TrustServerCertificate=true"
+  },
+  "DatabaseSettings": {
+    "InitDb": true
+  },
   "SecuritySettings": {
     "LoginLimits": {
       "HourlyMaxAttempts": 3,
