--- a/backend/Src/Lean.Cur.WebApi/nlog.config
+++ b/backend/Src/Lean.Cur.WebApi/nlog.config
@@ -3,68 +3,42 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       throwConfigExceptions="true"
-      internalLogLevel="Debug"
-      internalLogFile="${basedir}/logs/internal-nlog.txt"
-      internalLogToConsole="true">
+      internalLogLevel="Info"
+      internalLogFile="${basedir}/logs/internal-nlog.txt">
 
   <extensions>
     <add assembly="NLog.Web.AspNetCore"/>
   </extensions>
 
-  <!-- 自定义变量 -->
-  <variables>
-    <!-- 定义脱敏正则表达式 -->
-    <variable name="passwordPattern" value="Password=([^;]+)" />
-    <variable name="sensitivePattern" value="(Password|Token|Secret|Key)=([^;,\s]+)" />
-  </variables>
-
   <targets>
-    <!-- 系统调试日志文件 -->
-    <target xsi:type="File" name="debugfile"
-            fileName="${basedir}/logs/${shortdate}/debug.log"
-            layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${uppercase:${level}}|${logger}|${replace:inner=${message}:searchFor=${passwordPattern}:replaceWith=Password=***}:${replace:inner=${message}:searchFor=${sensitivePattern}:replaceWith=$1=***} ${exception:format=tostring}"
-            archiveFileName="${basedir}/logs/archives/debug.{#}.log"
-            archiveEvery="Day"
-            archiveNumbering="Rolling"
-            maxArchiveFiles="30"
-            archiveAboveSize="10485760"/>
-            
-    <!-- 错误日志文件 -->
-    <target xsi:type="File" name="errorfile"
-            fileName="${basedir}/logs/${shortdate}/error.log"
-            layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${uppercase:${level}}|${logger}|${replace:inner=${message}:searchFor=${passwordPattern}:replaceWith=Password=***}:${replace:inner=${message}:searchFor=${sensitivePattern}:replaceWith=$1=***} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|${callsite}"
-            archiveFileName="${basedir}/logs/archives/error.{#}.log"
+    <!-- 文件日志：记录所有日志 -->
+    <target xsi:type="File" name="allfile"
+            fileName="${basedir}/logs/${shortdate}/all.log"
+            layout="${longdate}|${event-properties:item=EventId:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}"
+            archiveFileName="${basedir}/logs/archives/all.{#}.log"
             archiveEvery="Day"
             archiveNumbering="Rolling"
             maxArchiveFiles="30"/>
 
-    <!-- SQL日志文件 -->
-    <target xsi:type="File" name="sqlfile"
-            fileName="${basedir}/logs/${shortdate}/sql.log"
-            layout="${longdate}|${uppercase:${level}}|SQL操作|${replace:inner=${message}:searchFor=${passwordPattern}:replaceWith=Password=***}:${replace:inner=${message}:searchFor=${sensitivePattern}:replaceWith=$1=***}"
-            archiveFileName="${basedir}/logs/archives/sql.{#}.log"
-            archiveEvery="Day"
-            archiveNumbering="Rolling"
-            maxArchiveFiles="30"/>
-
-    <!-- 控制台输出 -->
-    <target xsi:type="ColoredConsole" name="lifeconsole"
-            layout="${time}|${uppercase:${level}}|系统运行|${replace:inner=${message}:searchFor=${passwordPattern}:replaceWith=Password=***}:${replace:inner=${message}:searchFor=${sensitivePattern}:replaceWith=$1=***}">
+    <!-- 系统运行信息 -->
+    <target xsi:type="ColoredConsole" name="lifecycle"
+            layout="${time}|${level:uppercase=true}|系统运行|${message}">
       <highlight-row condition="level == LogLevel.Info" foregroundColor="Green"/>
       <highlight-row condition="level == LogLevel.Warn" foregroundColor="Yellow"/>
       <highlight-row condition="level == LogLevel.Error" foregroundColor="Red"/>
     </target>
 
-    <target xsi:type="ColoredConsole" name="dbconsole"
-            layout="${time}|${uppercase:${level}}|数据库|${replace:inner=${message}:searchFor=${passwordPattern}:replaceWith=Password=***}:${replace:inner=${message}:searchFor=${sensitivePattern}:replaceWith=$1=***}">
+    <!-- 数据库操作信息 -->
+    <target xsi:type="ColoredConsole" name="database"
+            layout="${time}|${level:uppercase=true}|数据库|${message}">
       <highlight-row condition="level == LogLevel.Info" foregroundColor="Cyan"/>
       <highlight-row condition="level == LogLevel.Warn" foregroundColor="Yellow"/>
       <highlight-row condition="level == LogLevel.Error" foregroundColor="Red"/>
     </target>
 
-    <target xsi:type="ColoredConsole" name="appconsole"
-            layout="${time}|${uppercase:${level}}|${message}">
-      <highlight-row condition="level == LogLevel.Info" foregroundColor="White"/>
+    <!-- 错误信息 -->
+    <target xsi:type="ColoredConsole" name="error"
+            layout="${time}|${level:uppercase=true}|错误|${message} ${exception:format=tostring}">
       <highlight-row condition="level == LogLevel.Warn" foregroundColor="Yellow"/>
       <highlight-row condition="level == LogLevel.Error" foregroundColor="Red"/>
       <highlight-row condition="level == LogLevel.Fatal" foregroundColor="Red" backgroundColor="White"/>
@@ -72,35 +46,13 @@
   </targets>
 
   <rules>
-    <!-- 错误日志写入错误日志文件 -->
-    <logger name="*" minlevel="Error" writeTo="errorfile" />
+    <!-- 文件日志：记录所有信息 -->
+    <logger name="*" minlevel="Trace" writeTo="allfile" />
     
-    <!-- 系统调试日志写入调试日志文件 -->
-    <logger name="Microsoft.*" minlevel="Debug" writeTo="debugfile" final="false" />
-    <logger name="System.*" minlevel="Debug" writeTo="debugfile" final="false" />
-    
-    <!-- SQL日志写入SQL日志文件 -->
-    <logger name="Lean.Cur.Infrastructure.Database.*" minlevel="Debug" writeTo="sqlfile" />
-    <logger name="SqlSugar.*" minlevel="Debug" writeTo="sqlfile" />
-
-    <!-- 控制台显示系统运行信息 -->
-    <logger name="Microsoft.Hosting.Lifetime" minlevel="Info" writeTo="lifeconsole" />
-    
-    <!-- 控制台显示数据库操作信息 -->
-    <logger name="Lean.Cur.Infrastructure.Database.*" minlevel="Info" writeTo="dbconsole" final="false">
-      <filters defaultAction="Log">
-        <when condition="level == LogLevel.Debug" action="Ignore" />
-      </filters>
-    </logger>
-
-    <!-- 控制台显示应用程序信息 -->
-    <logger name="Lean.Cur.*" minlevel="Info" writeTo="appconsole">
-      <filters defaultAction="Log">
-        <when condition="starts-with(logger, 'Lean.Cur.Infrastructure.Database')" action="Ignore" />
-      </filters>
-    </logger>
-    
-    <!-- 其他所有日志写入调试文件 -->
-    <logger name="*" minlevel="Debug" writeTo="debugfile" />
+    <!-- 控制台日志：按类型分类显示 -->
+    <logger name="Microsoft.Hosting.Lifetime" levels="Info,Warn,Error,Fatal" writeTo="lifecycle" />
+    <logger name="Lean.Cur.Infrastructure.Database.*" levels="Info,Warn,Error,Fatal" writeTo="database" />
+    <logger name="SqlSugar.*" levels="Info,Warn,Error,Fatal" writeTo="database" />
+    <logger name="*" minlevel="Warn" writeTo="error" />
   </rules>
 </nlog> 
